# gmail-cleaner

./: pyproject.toml
.claude/: lisa-draft.md
docs/plans/: 2026-02-03-gmail-cleaner-design.md  2026-02-03-gmail-cleaner-implementation.md
docs/specs/: gmail-cleaner-spec.md  usersshantamgmail-cleanerdocsplans2026-02-03-gmail-cleaner-designmd.md
gmail_cleaner/: __init__.py  __main__.py  classifier.py  cli.py  config.py  gmail.py  pending.py  types.py
tests/: __init__.py  test_classifier.py  test_config.py  test_pending.py
